--- a/roles/iso-installation/tasks/filesystem.yaml
+++ b/roles/iso-installation/tasks/filesystem.yaml
@@ -1,6 +1,6 @@
 - name: Create filesystem in root volume
   filesystem:
-    dev: '{{ "/dev/mapper/cryptroot" if use_encryption else install_drive + "2" }}'
+    dev: '{{ "/dev/mapper/cryptroot" if use_encryption else root_part }}'
     fstype: '{{ "btrfs" if use_btrfs else "ext4" }}'
     opts: '-L ArchLinux'
     force: yes
@@ -8,6 +8,6 @@
 - name: Mount root filesystem
   mount:
     path: /mnt
-    src: '{{ "/dev/mapper/cryptroot" if use_encryption else install_drive + "2" }}'
+    src: '{{ "/dev/mapper/cryptroot" if use_encryption else root_part }}'
     fstype: '{{ "btrfs" if use_btrfs else "ext4" }}'
     state: mounted
