--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -27,6 +27,10 @@ encryption:
 btrfs:
   enabled: true
 
+manual_partitions:
+  - boot: vda1
+  - root: vda2
+
 syncthing:
   api_key: !vault |
           $ANSIBLE_VAULT;1.1;AES256
