Disable cow for data directory (vm's & gns3)

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -38,6 +38,9 @@ btrfs:
       path: 'var/cache'
     - sub: '@tmp'
       path: 'var/tmp'
+    - sub: '@data'
+      path: 'data'
+      disable_cow: true
 
 # manual_partitions:
 #   - boot: vda1
