--- a/roles/common/tasks/04-terminal.yaml
+++ b/roles/common/tasks/04-terminal.yaml
@@ -1,5 +1,5 @@
 - name: TERMINAL - install terminal apps
-  aur:
+  kewlfft.aur.aur:
     name:
       - android-tools # adb & fastboot
       - cups # printing services
